[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pda = { path = "../programs/pda/programs/pda", features = ["no-entrypoint"] }
hacker = { path = "../programs/hacker/programs/hacker", features = ["no-entrypoint"] }
shellexpand = "3.1.0"
anyhow = "1.0.32"
clap = { version = "4.0.26", features = ["derive"] }
solana-sdk = "1.14.16"
anchor-client = "0.27.0"